--- a/a/index.htm
+++ b/a/index.htm
@@ -16,6 +16,7 @@
 
 <ul>
     <li><a href="gino1.jpg">gino1.jpg conversation</a></li>
+    <li><a href="gino2.jpg">gino2.jpg conversation</a></li>
 </ul>
 
 </body>
