--- a/a/index.htm
+++ b/a/index.htm
@@ -17,6 +17,7 @@
 <ul>
     <li><a href="gino1.jpg">gino1.jpg conversation</a></li>
     <li><a href="gino2.jpg">gino2.jpg conversation</a></li>
+    <li><a href="gino3.jpg">gino3.jpg conversation</a></li>
 </ul>
 
 </body>
